# style-vault

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml  run.sh
backend/config/: .env.example  app.json.example  component.json.example
backend/migrations/: env.py
backend/migrations/versions/: 20260423_add_favorites_notes_screenshots.py  20260423_create_users_table.py  20260427_add_name_customized.py
backend/src/style_vault/api/: auth_api.py  favorites_api.py  files_api.py  notes_api.py  screenshots_api.py
backend/src/style_vault/app/: main.py
backend/src/style_vault/complex/: database.py
backend/src/style_vault/complex/auth/: auth_util.py  oauth.py
backend/src/style_vault/complex/config/: base_settings.py  constants.py  inventory.py  request_context.py  settings.py
backend/src/style_vault/complex/constants/: auth_whitelist.py
backend/src/style_vault/complex/response/: code.py  exception.py  result.py
backend/src/style_vault/complex/storage/: minio_client.py
backend/src/style_vault/models/: __init__.py  favorite.py  note.py  screenshot.py  user.py
backend/src/style_vault/modules/auth/schemas/: auth_dto.py
backend/src/style_vault/modules/auth/service/: google_auth_service.py
backend/src/style_vault/modules/files/service/: minio_service.py
docs/mockups/: browse-style-variants.html  category-tabs-variants.html  product-detail-layouts.html  product-filter-variants-round2.html  product-filter-variants.html  (+1 more)
frontend/: .env.example  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+436 files in other folders)
